[package]
name = "project_twin"
version = "0.1.0"
edition = "2024"

[dependencies.bevy]
version = "0.18.1"
default-features = false
features = [
    "bevy_core_pipeline",
    "bevy_sprite_render",
    "tonemapping_luts",
    "multi_threaded",
    "async_executor",
    "default_font",
    "bevy_render",
    "bevy_camera",
    "bevy_sprite",
    "bevy_asset",
    "bevy_color",
    "bevy_winit",
    "bevy_state",
    "common_api",
    "zstd_rust",
    "bevy_text",
    "bevy_mesh",
    "bevy_log",
    "bevy_pbr",
    "bevy_ui",
    "std",
]

[dependencies]
pest = "2.8.6"
pest_derive = "2.8.6"
rand = "0.10.1"
thiserror = "2.0.18"
